# perudo

./: .gitignore  pyproject.toml  ruff.toml
perudo/controllers/: game_subscriber.py  server.py
perudo/game/: dice.py  game.py  guess.py
perudo/player/: player.py
perudo/system/: consts.py
